# magic-market

./: Anchor.toml  README.md  package.json
docs/: FEATURES.md
programs/prediction_market/: Cargo.toml
programs/prediction_market/src/: lib.rs
tests/: prediction_market.ts
